--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: SSM for solar geolocation
 Version: 0.1.2
 Date: 2013-05-15
-Author: Eldar Rakhimberdiev <eldar@nioz.nl>
+Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contribution of Anatoly Saveliev
 Maintainer: Eldar Rakhimberdiev <eldar@nioz.nl>
 Description: The scope of the package is to position animal using data from solar geolocation tags
 License: 
