--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: fLightR
+Package: FLightR
 Type: Package
 Title: SSM for solar geolocation
-Version: 0.1.3
-Date: 2013-05-15
+Version: 0.1.4
+Date: 2013-06-25
 Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contribution of Anatoly Saveliev
 Maintainer: Eldar Rakhimberdiev <eldar@nioz.nl>
 Description: The scope of the package is to position animal using data from solar geolocation tags
