--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,4 +6,5 @@ Date: 2013-06-25
 Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contribution of Anatoly Saveliev
 Maintainer: Eldar Rakhimberdiev <eldar@nioz.nl>
 Description: The scope of the package is to position animal using data from solar geolocation tags
-License: 
+License: GNU GPL v3.0
+
