--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,20 +12,6 @@ BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
     R (>= 3.0.2)
 Imports:
-    GeoLight,
-    maptools,
-    rgeos,
-    geosphere,
-    raster,
-    fields,
-    tsoutliers,
-    forecast,
-    circular,
-    truncnorm,
-    parallel,
-    bit,
-    aspace,
-    rgdal,
-    CircStats
+    GeoLight
 License: GNU GPL v3.0
 
