--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,20 @@ BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
     R (>= 3.0.2)
 Imports:
-    GeoLight
+    GeoLight,
+    maptools,
+    rgeos,
+    geosphere,
+    raster,
+    fields,
+    tsoutliers,
+    forecast,
+    circular,
+    truncnorm,
+    parallel,
+    bit,
+    aspace,
+    rgdal,
+    CircStats
 License: GNU GPL v3.0
 
