--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: FLightR
 Type: Package
 Title: SSM for solar geolocation
-Version: 0.3.7
-Date: 2015-12-21
-Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contribution of Anatoly Saveliev
+Version: 0.3.8
+Date: 201-03-16
+Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contribution of Anatoly Saveliev and Julia Karagicheva
 Maintainer: Eldar Rakhimberdiev <eldar@nioz.nl>
 Description: The scope of the package is to position animal using data from solar geolocation tags
 URL: http://github.com/eldarrak/FLightR
@@ -28,6 +28,7 @@ Depends:
 	snow,
 	Rcpp,
 	RcppArmadillo,
+	Matrix,
 	ggmap
 License: GNU GPL v3.0
 ByteCompile: true
