--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,14 +9,14 @@ Description: The scope of the package is to position animal using data from sola
 URL: http://github.com/eldarrak/FLightR
 BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
-    R (>= 3.0.2),
+    R (>= 3.0.2)
+Imports:
     GeoLight,
     maptools,
     rgeos,
     geosphere,
     raster,
     fields,
-    tsoutliers,
     forecast,
     circular,
     truncnorm,
@@ -29,5 +29,8 @@ Depends:
 	Rcpp,
 	RcppArmadillo,
 	ggmap
+Suggests:
+    tsoutliers
+
 License: GNU GPL v3.0
 ByteCompile: true
