--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: FLightR
 Type: Package
-Title: SSM for solar geolocation
+Title: template fit SSM for solar geolocation
 Version: 0.4.0
 Date: 2016-05-11
-Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contribution of Anatoly Saveliev and Julia Karagicheva
+Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contributions of Anatoly Saveliev and Julia Karagicheva
 Maintainer: Eldar Rakhimberdiev <eldar@nioz.nl>
 Description: The scope of the package is to position animal using data from solar geolocation tags
 URL: http://github.com/eldarrak/FLightR
