--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,11 @@ Type: Package
 Title: template fit SSM for solar geolocation
 Version: 0.4.0
 Date: 2016-05-11
-Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contributions of Anatoly Saveliev and Julia Karagicheva
+Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contributions of Anatoly
+    Saveliev and Julia Karagicheva
 Maintainer: Eldar Rakhimberdiev <eldar@nioz.nl>
-Description: The scope of the package is to position animal using data from solar geolocation tags
+Description: The scope of the package is to position animal using data from
+    solar geolocation tags
 URL: http://github.com/eldarrak/FLightR
 BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
@@ -23,11 +25,12 @@ Depends:
     bit,
     rgdal,
     CircStats,
-	Rcpp,
-	RcppArmadillo,
-	ggmap,
-	ggsn
+    Rcpp,
+    RcppArmadillo,
+    ggmap,
+    ggsn
 Suggests:
     tsoutliers
 License: GNU GPL v3.0
 ByteCompile: true
+RoxygenNote: 5.0.1
