--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,6 @@ export(make.prerun.object)
 export(map.FLightR.ggmap)
 export(plot.lon.lat)
 export(plot.slopes.by.location)
-export(plot_time_coverage)
+export(plot.util.distr)
 export(run.particle.filter)
 export(solar.FLightR)
