--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: FLightR
 Type: Package
 Title: template fit SSM for solar geolocation
 Version: 0.4.2
-Date: 2016-08-29
+Date: 2016-08-31
 Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contributions of Anatoly
     Saveliev and Julia Karagicheva
 Maintainer: Eldar Rakhimberdiev <eldar@nioz.nl>
@@ -12,13 +12,8 @@ URL: http://github.com/eldarrak/FLightR
 BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
     R (>= 3.0.2),
-    GeoLight,
-    maptools,
-    rgeos,
-    geosphere,
-    raster,
+	maptools,
     fields,
-    forecast,
     circular,
     truncnorm,
     parallel,
@@ -27,6 +22,9 @@ Depends:
     CircStats,
     Rcpp,
     RcppArmadillo,
+    rgeos,
+    raster,
+    fields,
     ggmap,
     ggsn
 Suggests:
