--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(BAStag2TAGS)
 export(GeoLight2TAGS)
 export(find.times.distribution)
 export(get.tags.data)
+export(get_ZI_distances)
 export(make.calibration)
 export(make.grid)
 export(make.prerun.object)
