new function plot.likelihoods added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(make.calibration)
 export(make.grid)
 export(make.prerun.object)
 export(map.FLightR.ggmap)
+export(plot.likelihood)
 export(plot.lon.lat)
 export(plot.slopes.by.location)
 export(plot.util.distr)
