--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,5 @@ export(plot.lon.lat)
 export(plot.slopes.by.location)
 export(plot.util.distr)
 export(run.particle.filter)
+export(stationary.migration.summary)
 export(twGeos2TAGS)
