--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,6 @@ URL: http://github.com/eldarrak/FLightR
 BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
     R (>= 3.0.2),
-	maptools,
     fields,
     truncnorm,
     parallel,
@@ -28,6 +27,7 @@ Depends:
 	mgcv
 Imports:
     circular,
+	maptools
 License: GNU GPL v3.0
 ByteCompile: true
 RoxygenNote: 5.0.1
