--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,6 @@ URL: http://github.com/eldarrak/FLightR
 BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
     R (>= 3.0.2),
-    truncnorm,
-    parallel,
     rgdal,
     Rcpp,
     RcppArmadillo,
@@ -27,7 +25,10 @@ Imports:
     CircStats,
     circular,
 	fields,
-	maptools
+	maps,
+	maptools,
+	parallel,
+	truncnorm
 License: GNU GPL v3.0
 ByteCompile: true
 RoxygenNote: 5.0.1
