--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,15 +14,15 @@ Depends:
     R (>= 3.0.2),
     ggmap,
 	ggplot2,
-    ggsn,
-	mgcv
+    ggsn
 Imports:
     bit,
     CircStats,
     circular,
 	fields,
 	maptools,
-	parallel,
+	mgcv,
+    parallel,
 	RcppArmadillo,
     rgdal,
     rgeos,
