--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,10 @@ export(make.calibration)
 export(make.grid)
 export(make.prerun.object)
 export(map.FLightR.ggmap)
-export(plot.likelihood)
 export(plot.lon.lat)
-export(plot.slopes.by.location)
-export(plot.util.distr)
+export(plot_likelihood)
+export(plot_slopes_by_location)
+export(plot_util_distr)
 export(run.particle.filter)
 export(stationary.migration.summary)
 export(twGeos2TAGS)
