--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ export(make.calibration)
 export(make.grid)
 export(make.prerun.object)
 export(map.FLightR.ggmap)
-export(plot.lon.lat)
 export(plot_likelihood)
+export(plot_lon_lat)
 export(plot_slopes_by_location)
 export(plot_util_distr)
 export(run.particle.filter)
