--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ before_install:
 
 language: R
 sudo: required
+r_github_packages:
+  - tidyverse/ggplot2
+  - dkahle/ggmap
+
 warnings_are_errors: false
 cache: packages
 after_success:
