--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ on_failure:
   - 7z a failure.zip *.Rcheck\*
   - appveyor PushArtifact failure.zip
 
-on_success:
+after_success:
   - Rscript -e 'covr::codecov()'
   
 environment:
