--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
     R (>= 3.0.2),
     ggmap,
-	ggplot2,
+	ggplot2
 Imports:
     bit,
     ggsn,
