--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,12 @@ Description: With a hidden Markov model package estimates postions of animal fro
 URL: http://github.com/eldarrak/FLightR
 BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
-    R (>= 3.0.2),
-	ggplot2
+    R (>= 3.0.2)
 Imports:
     bit,
     ggsn,
 	ggmap,
+    ggplot2,
     CircStats,
     circular,
 	GeoLight,
