--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: FLightR
 Type: Package
-Title: template fit SSM for solar geolocation
+Title: Hidden Markov Model for Solar Geolocation Archival Tags
 Version: 0.4.4
 Date: 2016-12-07
 Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contributions from Anatoly
