vignetter first version

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,4 +36,7 @@ ByteCompile: true
 RoxygenNote: 5.0.1
 Suggests:
     covr,
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
