--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contributions from Anatoly
     Saveliev and Julia Karagicheva
 Maintainer: Eldar Rakhimberdiev <eldar@nioz.nl>
 Description: Estimate positions of animal from data collected by solar geolocation archival tags.
-URL: http://github.com/eldarrak/FLightR
+URL:  https://CRAN.R-project.org/package=FLightR
 BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
     R (>= 3.0.2)
