--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,22 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+language: r
 
-before_install:
-  - sudo apt-get install libproj-dev libgeos++-dev
-  - export CURWD=`pwd`
-  - cd
-  - wget http://download.osgeo.org/gdal/2.1.0/gdal-2.1.0.tar.gz
-  - tar zxf gdal-2.1.0.tar.gz
-  - cd gdal-2.1.0
-  - ./configure
-  - make
-  - sudo make install
-  - cd
-  - wget http://download.osgeo.org/proj/proj-4.9.2.tar.gz
-  - tar zxvf proj-4.9.2.tar.gz
-  - cd proj-4.9.2
-  - ./configure
-  - make
-  - sudo make install
-  - sudo ldconfig
-  - cd $CURWD
+r:
+  - release
+  - devel
+  - oldrel
+ 
+cache: packages
 
-
-language: R
 sudo: required
 
+dist: trusty
+
+before_install:
+  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
+  - sudo apt-get --yes --force-yes update -qq
+  - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
+
 warnings_are_errors: false
-cache: packages
+
 after_success:
   - Rscript -e 'covr::codecov()'
