--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - sudo apt-get --yes --force-yes update -qq
   - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
 
-warnings_are_errors: false
+warnings_are_errors: true
 
 after_success:
   - Rscript -e 'covr::codecov()'
