--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: FLightR
 Type: Package
-Title: Hidden Markov Model for Solar Geolocation Archival Tags
+Title: A package for reconstructing animal paths from solar geolocation loggers
 Version: 0.4.7
 Date: 2017-09-07
-Author: Eldar Rakhimberdiev <eldar@nioz.nl> with contributions from Anatoly
-    Saveliev and Julia Karagicheva
+Author: Authors@R: c(
+    person("Eldar", "Rakhimberdiev", email = "eldar@nioz.nl", role = c("aut","cre")),
+    person("Anatoly", "Saveliev", role = "aut"),
+    person("Julia", "Karagicheva", role = "aut"),
+    person("Simeon", "Lisovski", role = "ctb"))
 Maintainer: Eldar Rakhimberdiev <eldar@nioz.nl>
-Description: Estimate positions of animal from data collected by solar geolocation archival tags.
+Description: Spatiotemporal locations of an animal are computed from annotated data with a hidden Markov  model via particle filter algorithm. The package is relatively robust to varying degrees of shading. The hidden Markov model is described in Movement Ecology (Rakhimberdiev et al., 2015)<doi:10.1186/s40462-015-0062-5>, general package description is in the Methods in Ecology and evolution (Rakhimberdiev et al., 2016)<doi:10.1111/2041-210X.12765> and package accuracy in the Journal of Avian Biology (Rakhimberdiev et al. 2016)<doi:10.1111/jav.00891>.
 URL: https://CRAN.R-project.org/package=FLightR
 BugReports: http://github.com/eldarrak/FLightR/issues
 Depends:
