--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ install:
 build_script:
   - travis-tool.sh install_deps
   - travis-tool.sh github_package jimhester/covr
+  - travis-tool.sh github_package dkahle/ggmap
 
 test_script:
   - travis-tool.sh run_tests
