--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ sudo: required
 
 dist: trusty
 
+os:
+  - linux
+  - osx
+
 before_install:
   - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
   - sudo apt-get --yes --force-yes update -qq
