--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,11 @@ os:
   - osx
 
 before_install:
-  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
-  - sudo apt-get --yes --force-yes update -qq
-  - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then 
+    sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
+    sudo apt-get --yes --force-yes update -qq
+    sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
+fi
 
 warnings_are_errors: true
 
