--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ os:
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then 
-    sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
-    sudo apt-get --yes --force-yes update -qq
-    sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
-fi
+       sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes;
+       sudo apt-get --yes --force-yes update -qq;
+       sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev;
+    fi
 
 warnings_are_errors: true
 
