--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ before_install:
        sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes;
        sudo apt-get --yes --force-yes update -qq;
        sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev;
+    else 
+       brew_packages: libgit2;
     fi
 
 warnings_are_errors: true
