--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: FLightR
 Type: Package
 Title: Reconstruct Animal Paths from Solar Geolocation Loggers Data
 Version: 0.5.1
-Date: 2020-08-13
+Date: 2021-06-25
 Authors@R: c(
     person("Eldar", "Rakhimberdiev", email = "e.rakhimberdiev@rug.nl", role = c("aut","cre")),
     person("Anatoly", "Saveliev", role = "aut"),
@@ -16,7 +16,7 @@ Description: Spatio-temporal locations of an animal are computed
     general package description is in the Methods in Ecology and Evolution (Rakhimberdiev et al., 2017) <doi:10.1111/2041-210X.12765>
     and package accuracy assessed in the Journal of Avian Biology (Rakhimberdiev et al. 2016) <doi:10.1111/jav.00891>.
 URL: https://CRAN.R-project.org/package=FLightR
-BugReports: http://github.com/eldarrak/FLightR/issues
+BugReports: https://github.com/eldarrak/FLightR/issues
 Depends:
     R (>= 3.0.2)
 Imports:
