--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ install:
 
 build_script:
   - travis-tool.sh install_deps
-  - travis-tool.sh github_package jimhester/covr
+  - travis-tool.sh github_package r-lib/covr
   - travis-tool.sh github_package dkahle/ggmap
 
 test_script:
