--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ init:
 
 install:
   ps: |
-        Import-Module '.\scripts\appveyor-tool.ps1'
+        Import-Module 'r-appveyor\scripts\appveyor-tool.ps1'
         Bootstrap
 
 # Adapt as necessary starting from here
