--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ init:
 
 install:
   ps: |
-        Import-Module '.\scripts\appveyor-tool.ps1'
+        Import-Module '.\appveyor-tool.ps1'
         Bootstrap
 
 # Adapt as necessary starting from here
