--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,8 @@ install:
 
 # Adapt as necessary starting from here
 
-  env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+GITHUB_PAT:  
+  secure: SCSbqeoITOpmrsoAuZB3tfGrW/YJG6fB+ohVvP/WUaTWGPPx3NnQ6J4WWDwXew9j    
 
 
 environment:
