Revert "Update appveyor.yml"
This reverts commit 9195ff35c7e85034ac8b5dae953756453d80761d.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,8 @@ install:
 
 # Adapt as necessary starting from here
 
-GITHUB_PAT:  
-  secure: SCSbqeoITOpmrsoAuZB3tfGrW/YJG6fB+ohVvP/WUaTWGPPx3NnQ6J4WWDwXew9j    
+  env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
 
 environment:
