--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,13 +21,14 @@ Depends:
     R (>= 3.0.2)
 Imports:
     bit,
+	geosphere,
     ggsn,
     ggmap,
     ggplot2,
     CircStats,
     circular,
     fields,
-    maptools,
+	maps,
     methods,
     mgcv,
     nlme,
